<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <Button
       android:id="@+id/btn_ui"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="UI界面各个控件"
       android:textAllCaps="false"
       />

   <Button
       android:id="@+id/btn_nvg"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/navigation"
       android:textAllCaps="false"
       />

   <Button
      android:id="@+id/btn_viewmdel"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/viewmodel"
       android:textAllCaps="false"
      />

   <Button
       android:id="@+id/btn_livedata"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/viewlivedata"
       android:textAllCaps="false"
       />

   <Button
       android:id="@+id/btn_dataBinding"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="DataBinding"
       android:textAllCaps="false"
       />

   <Button
       android:id="@+id/btn_room"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Room数据库"
       android:textAllCaps="false"
       />
</LinearLayout>